Cleaning and fixing, nothing major

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 .RData
 .Ruserdata
 .Project_data
-.local_data
-/local_data/*
+/local_data/
 .DS_Store
+.Data_preprocessing.pptx
 /data/*
-/raw_data/*
+/data/_raw/*
